-add mapstruct -add jpa specifications -general refactoring -moving to java17