@@ -5,44 +5,48 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.ewm.StatsClient;
-import ru.practicum.ewm.event.dto.EventFullDto;
-import ru.practicum.ewm.event.dto.UpdateEventAdminRequest;
+import ru.practicum.ewm.event.dto.EventDto;
+import ru.practicum.ewm.event.dto.EventParamDto;
+import ru.practicum.ewm.event.dto.EventUpdateAdminDto;
 import ru.practicum.ewm.event.mapper.EventMapper;
 import ru.practicum.ewm.event.model.Event;
 import ru.practicum.ewm.event.repository.EventRepository;
+import ru.practicum.ewm.event.specification.PostSpecification;
 import ru.practicum.ewm.request.model.Request;
 import ru.practicum.ewm.request.repository.RequestRepository;
 import ru.practicum.ewm.util.exception.InvalidRequestException;
+import ru.practicum.ewm.util.exception.NotFoundException;
 import ru.practicum.ewm.util.exception.ValidationException;
 import ru.practicum.ewm.util.helper.ObjectCounter;
-import ru.practicum.ewm.util.helper.ObjectFinder;
-import ru.practicum.ewm.util.helper.ObjectMerger;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EventAdminServiceImpl implements EventAdminService {
     private final EventRepository eventRepository;
     private final RequestRepository requestRepository;
+    private final PostSpecification postSpecification;
+    private final EventMapper eventMapper;
     private final StatsClient statsClient;
 
     /**
      * EventAdminController method; endpoint: PATCH "/admin/events/{eventId}"
      *
      * @param eventId
-     * @param updateEventAdminRequest
+     * @param eventUpdateAdminDto
      * @return EventFullDto
      */
     @Override
     @Transactional
-    public EventFullDto update(Long eventId, UpdateEventAdminRequest updateEventAdminRequest) {
-        Event updatedEvent = ObjectFinder.findEventById(eventRepository, eventId);
-        LocalDateTime newEventDate = updateEventAdminRequest.getEventDate();
+    public EventDto update(long eventId, EventUpdateAdminDto eventUpdateAdminDto) {
+        var event = eventRepository.findById(eventId).orElseThrow(() ->
+                new NotFoundException("Event with id=" + eventId + " was not found"));
+
+
+        LocalDateTime newEventDate = eventUpdateAdminDto.getEventDate();
 
         if (newEventDate != null) {
             if (newEventDate.isBefore(LocalDateTime.now())) {
@@ -50,7 +54,7 @@ public class EventAdminServiceImpl implements EventAdminService {
                         "than current moment");
             }
 
-            LocalDateTime publishDate = updatedEvent.getPublishedOn();
+            LocalDateTime publishDate = event.getPublishedOn();
 
             if (newEventDate.isBefore(publishDate.minusHours(1))) {
                 throw new InvalidRequestException("Cannot update the event date because it is earlier than the " +
@@ -58,84 +62,66 @@ public class EventAdminServiceImpl implements EventAdminService {
             }
         }
 
-        if (updateEventAdminRequest.getStateAction() != null) {
-            if (updatedEvent.getState() != Event.State.PENDING) {
+        if (eventUpdateAdminDto.getStateAction() != null) {
+            if (event.getState() != Event.State.PENDING) {
                 throw new ValidationException("Cannot publish or reject the event because it's not " +
-                        "in the right state: " + updatedEvent.getState());
+                        "in the right state: " + event.getState());
             }
 
-            if (updateEventAdminRequest.getStateAction() == UpdateEventAdminRequest.StateAction.PUBLISH_EVENT) {
-                updatedEvent.setState(Event.State.PUBLISHED);
-                updatedEvent.setPublishedOn(LocalDateTime.now());
+            if (eventUpdateAdminDto.getStateAction() == EventUpdateAdminDto.StateAction.PUBLISH_EVENT) {
+                event.setState(Event.State.PUBLISHED);
+                event.setPublishedOn(LocalDateTime.now());
             } else {
-                updatedEvent.setState(Event.State.CANCELED);
+                event.setState(Event.State.CANCELED);
             }
         }
 
-        if (updateEventAdminRequest.getLocation() != null) {
-            updatedEvent.setLat(updatedEvent.getLat());
-            updatedEvent.setLon(updatedEvent.getLon());
+        if (eventUpdateAdminDto.getLocation() != null) {
+            event.setLat(event.getLat());
+            event.setLon(event.getLon());
         }
 
-        ObjectMerger.copyProperties(updateEventAdminRequest, updatedEvent);
+        eventMapper.update(eventUpdateAdminDto, event);
 
-        EventFullDto eventFullDto = EventMapper.toEventFullDtoFromEvent(eventRepository.save(updatedEvent));
+        var dto = eventMapper.map(eventRepository.save(event));
 
-        eventFullDto.setViews(ObjectCounter.countViewsById(eventId, statsClient));
-        eventFullDto.setConfirmedRequests(requestRepository.countByEvent_IdAndRequestStatus(eventId, Request.RequestStatus.CONFIRMED));
+        dto.setViews(ObjectCounter.countViewsById(eventId, statsClient));
+        dto.setConfirmedRequests(requestRepository.countByEvent_IdAndRequestStatus(eventId, Request.RequestStatus.CONFIRMED));
 
-        return eventFullDto;
+        return dto;
     }
 
     /**
-     * Endpoint: GET "/admin/events"
      *
-     * @param initiators
-     * @param states
-     * @param categories
-     * @param rangeStart
-     * @param rangeEnd
+     * @param paramDto
      * @param pageable
-     * @return List<EventFullDto>
+     * @return
      */
     @Override
     @Transactional(readOnly = true)
-    public List<EventFullDto> getAll(
-            List<Long> initiators,
-            List<Event.State> states,
-            List<Long> categories,
-            LocalDateTime rangeStart,
-            LocalDateTime rangeEnd,
-            Pageable pageable
-    ) {
-
-        List<Event> events = eventRepository.getAllForAdminWithParam(
-                initiators,
-                states,
-                categories,
-                rangeStart,
-                rangeEnd,
-                pageable
-        );
+    public List<EventDto> index(EventParamDto paramDto, Pageable pageable) {
+        var spec = postSpecification.build(paramDto);
+        var events = eventRepository.findAll(spec, pageable).getContent();
 
         if (events.isEmpty()) {
-            return new ArrayList<>();
+            return List.of();
         }
 
         List<Long> eventIds = events.stream()
                 .map(Event::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<Long, Long> confirmedRequests = ObjectCounter.countConfirmedRequestByIds(eventIds, requestRepository);
         Map<Long, Long> countViews = ObjectCounter.countViewsByIds(eventIds, statsClient);
 
-        return events.stream()
-                .map(EventMapper::toEventFullDtoFromEvent)
+        var dtos = events.stream()
+                .map(eventMapper::map)
                 .peek(eventShortDto -> {
                     eventShortDto.setViews(countViews.getOrDefault(eventShortDto.getId(), 0L));
                     eventShortDto.setConfirmedRequests(confirmedRequests.getOrDefault(eventShortDto.getId(), 0L));
                 })
-                .collect(Collectors.toList());
+                .toList();
 
+        return dtos;
     }
 }
